--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.0",
+    "@types/js-cookie": "^3.0.6",
+    "antd": "^5.24.4",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
