--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
